--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@
   box-sizing: border-box;
 }
 
+.sidebar nav a img {
+  height: 24px; /* anciennement 20px */
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
 .toggle-password {
   position: absolute;
   right: 8px;
@@ -42,3 +48,4 @@
 .toggle-password:hover svg {
   opacity: 1;
 }
+
